# ocrpolish

./: .gitignore  @METADATA_EXTRACTION.md  GEMINI.md  README.md  pyproject.toml
.direnv/python-3.12/: pyvenv.cfg
.specify/: feature.json  init-options.json  integration.json
NATO_NPG_metadata.v0/: NPG(MINISTERIAL)WP(74)1-REV1_ENG.md  NPG(MINISTERIAL)WP(74)1_ENG.md  NPG(SG)N(68)10_ENG.md  NPG(SG)N(68)11_ENG.md  NPG(SG)N(68)12_ENG.md  NPG(SG)N(68)13_ENG.md  NPG(SG)N(68)14_ENG.md  NPG(SG)N(68)15_ENG.md  NPG(SG)N(68)16_ENG.md  NPG(SG)N(68)17_ENG.md  NPG(SG)N(68)18_ENG.md  NPG(SG)N(68)19_ENG.md  NPG(SG)N(68)1_ENG.md  NPG(SG)N(68)20_ENG.md  NPG(SG)N(68)21_ENG.md  NPG(SG)N(68)22_ENG.md  NPG(SG)N(68)23_ENG.md  NPG(SG)N(68)24_ENG.md  NPG(SG)N(68)25_ENG.md  NPG(SG)N(68)27_ENG.md  NPG(SG)N(68)28_ENG.md  NPG(SG)N(68)29_ENG.md  NPG(SG)N(68)2_ENG.md  NPG(SG)N(68)31_ENG.md  NPG(SG)N(68)32_ENG.md  NPG(SG)N(68)3_ENG.md  NPG(SG)N(68)4_ENG.md  NPG(SG)N(68)5_ENG.md  NPG(SG)N(68)6_ENG.md  NPG(SG)N(68)7_ENG.md  NPG(SG)N(68)8_ENG.md  NPG(SG)N(68)9_ENG.md  NPG(SG)N(69)12_ENG.md  NPG(SG)N(69)13_ENG.md  NPG(SG)N(69)14_ENG.md  NPG(SG)N(69)15_ENG.md  NPG(SG)N(69)16_ENG.md  NPG(SG)N(69)18_ENG.md  NPG(SG)N(69)19_ENG.md  NPG(SG)N(69)1_ENG.md  (+1184 more)
NATO_NPG_metadata.v4.html/: content.html
docs/: LLM_METADATA_EXTRACTION.md
obsidian_template/: CONTENT.base  index.md
ocrpolish/: cli.py  core.py  data_model.py  processor.py  processor_metadata.py
tests/: evaluate_topic_accuracy.py  test_metadata_utils.py  test_topics_service.py
topics/: INDEX-TERMS.md  NATO_themes.yaml  USEFUL_TAGS.yaml
(+234 files in other folders)
